# storage

./: AGENTS.md  README.md  _trace.py  disk-copilot  pyproject.toml
.github/: copilot-instructions.md
disk_cleanup/: __init__.py  __main__.py  actions.py  ai_advisor.py  cache.py  cleaner.py  cli.py  config.py  disk_map.py  interactive.py  locks.py  manifest.py  query.py  repl.py  scanner.py  system_prompt.md  utils.py
disk_cleanup/scanners/: __init__.py  app_data.py  applications.py  brew.py  caches.py  dev_artifacts.py  downloads.py  duplicates.py  git_repos.py  large_files.py  logs.py  model_caches.py  save_files.py  screenshots.py  trash.py  xcode.py
diskman.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
storage.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
